# sistema-gerenciamento-midia

./: CHANGELOG.md  README.md  projeto.cabal
App/: Main.hs  Tipos.hs  midias.csv
App/Arquivos/: Midia.csv  Users.csv
App/Entities/: Midias.hs  SubmenuAdicionarMidia.hs  SubmenuAdicionarUsuario.hs  SubmenuEditar.hs  Usuarios.hs
App/Servicos/: Arquivos.hs
Src/Entities/: Emprestimos.hs  Historico.hs  Midias.hs  SubMenuRelatoriosEstatisticas.hs  SubMenuRelatórioeestatisticas.hs  SubmenuAdicionarMidia.hs  SubmenuAdicionarUsuario.hs  SubmenuEditar.hs  SubmenuRelatoriosEstatisticas.hs  Tipos.hs  Usuarios.hs
Src/Log/: Log.hs
Src/Services/: Arquivos.hs  Movimentacoes.hs  SubmenuMovimentacoes.hs
Src/Services/Arquivos/: .~lock.usuarios.csv#  Midia.csv  emprestimos.csv  historico.txt  listaEspera.csv  midias.csv  usuarios.csv
app/: Tipos.hs
app/Log/: Log.hs
app/entities/: Midias.hs  SubmenuEditar.hs  Usuarios.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
