cabal-version:    3.0

name:             sistema-gerenciamento-midia
version:          0.0.0.1
synopsis:         Sistema de gerenciamento de mídias
description:      Sistema de gerenciamento de mídias(livros,filmes,jogos)
author:           grupo
maintainer:       grupo@mail
category:         management
build-type:       Simple
extra-doc-files:  CHANGELOG.md, README.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable sistema
    import:          warnings
    main-is:         Main.hs
    hs-source-dirs:  App, Src
    other-modules:
        Entities.Midias 
        Entities.SubmenuAdicionarMidia 
        Entities.SubmenuAdicionarUsuario 
        Entities.SubmenuEditar 
        Entities.Tipos 
        Entities.Usuarios 
        Services.Arquivos 
        Services.Movimentacoes 
        Log.Log 

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:    base ^>=4.18.3.0, time
    default-language: Haskell2010
